@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2005/07/13 18:01:23 jlam Exp $
+# $NetBSD: Makefile,v 1.4 2005/08/06 06:19:08 jlam Exp $
 
-DISTNAME=	Class-Factory-Util-1.6
+DISTNAME=	Class-Factory-Util-1.7
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Class/}
 
@@ -12,7 +11,8 @@ COMMENT=	Perl module to help factory classes
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
-PERL5_PACKLIST=	auto/Class/Factory/Util/.packlist
+PERL5_MODULE_TYPE=	Module::Build
+PERL5_PACKLIST=		auto/Class/Factory/Util/.packlist
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
