@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.1.1.1 2005/01/25 15:59:14 cube Exp $
+$NetBSD: distinfo,v 1.2 2005/02/23 22:24:23 agc Exp $
 
-SHA1 (Class-Factory-Util-1.6.tar.gz) = 21cb84d13baf338af76ca226c5089b64f0292e50
-RMD160 (Class-Factory-Util-1.6.tar.gz) = 1876da5bc394df1b68550d1a584137543ea2a747
-Size (Class-Factory-Util-1.6.tar.gz) = 9939 bytes
+SHA1 (Class-Factory-Util-1.7.tar.gz) = d7d3f27b3d7af789ea58e1acdf0ea9da3251d239
+RMD160 (Class-Factory-Util-1.7.tar.gz) = 114b60a66db59d536a84c6ce3b801c1c6e71e296
+Size (Class-Factory-Util-1.7.tar.gz) = 11942 bytes
