@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1292 2007/06/09 23:25:50 abs Exp $
+$NetBSD: CHANGES-2007,v 1.1293 2007/06/09 23:27:13 abs Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2504,3 +2504,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated databases/p5-DBI to 1.56 [abs 2007-06-10]
 	Updated devel/p5-Algorithm-Diff to 1.1902 [abs 2007-06-10]
 	Updated devel/p5-Carp-Clan to 5.9 [abs 2007-06-10]
+	Updated devel/p5-Class-Factory-Util to 1.7 [abs 2007-06-10]
